changed text in textarea

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button id="close">X</button>
         </div>
 
-        <textarea id="textarea">Bharat Yadav</textarea>
+        <textarea id="textarea">Text</textarea>
 
         <div id="footer">
             <button id="model">Model</button>
